tests/NormalTests/paczka1/small_fuzzy/85058032.err
Error in line 2: e8gw3B A656 49,4
Error in line 5: gN2 S107 59,4
Error in line 15: 3lnpIdIW9d S978 13,7
